// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WInput > action 1`] = `
<div
  class="flex"
>
  <input
    class="[&&]:rounded-l-full [&&]:rounded-none text-black-950 outline-none border-white-50 required email rounded-full border min-w-[300px] sm:min-w-full py-sm px-md block w-full shadow-sm text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
    name="email"
    placeholder="email@mail.com"
    type="email"
    value=""
  />
  <input
    class="text-wit-blue-500 margin rounded-r-full py-sm px-md inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-e-md border border-black-950 bg-black-950 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none cursor-pointer"
    type="submit"
  />
</div>
`;

exports[`WInput > base 1`] = `
<div
  class="flex"
>
  <input
    class="text-black-950 outline-none border-white-50 required email rounded-full border min-w-[300px] sm:min-w-full py-sm px-md block w-full shadow-sm text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
    name="string"
    placeholder="Amount"
    type="string"
    value=""
  />
  <!--v-if-->
</div>
`;
